@startuml

hide methods
left to right direction
skinparam classAttributeIconSize 0


class Employee {
-name
}

class Company {
-designation
}

class Ship {
-mmsiCode
-name
-imoCode
-numberEnergyGenerators
-generatorPower
-callSign
-vesselType
-length
-width
-capacity
-draft
}

Company "1"--"1..*" Employee: has >
Company "1"--"1..*" Ship: has >

@enduml